dist_man1_MANS=

if BUILD_WALTERCOIND
  dist_man1_MANS+=waltercoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=waltercoin-qt.1
endif

if BUILD_WALTERCOIN_CLI
  dist_man1_MANS+=waltercoin-cli.1
endif

if BUILD_WALTERCOIN_TX
  dist_man1_MANS+=waltercoin-tx.1
endif

if BUILD_WALTERCOIN_UTIL
  dist_man1_MANS+=waltercoin-util.1
endif

if ENABLE_WALLET
if BUILD_WALTERCOIN_WALLET
  dist_man1_MANS+=waltercoin-wallet.1
endif
endif
